--- a/eks-cluster-ec2/k8s-files/ingress/ingress/ingress.yaml
+++ b/eks-cluster-ec2/k8s-files/ingress/ingress/ingress.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   ingressClassName: alb
   rules:
- # - host: example.com
+   - host: unitymedicaltrans.com
    - http:
         paths:
           - path: /
