--- a/eks-blueprint/k8s-files/basic-k8s-objects/pod.yml
+++ b/eks-blueprint/k8s-files/basic-k8s-objects/pod.yml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: jjtech-pod
-  namespace: application
+  namespace: default
   labels:
-    app: myapp
+    app: my-app
     run: nginx
 spec:
   containers:
-  - name: my-app
+  - name: myapp
     image: nginx
     resources:
       limits:
@@ -20,3 +20,4 @@ spec:
     ports:
     - containerPort:  80
       name:  http
+
