--- a/eks-cluster-ec2/k8s-files/basic-k8s-objects/pod.yml
+++ b/eks-cluster-ec2/k8s-files/basic-k8s-objects/pod.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: jjtech-pod
-  namespace: application
+  namespace: default
   labels:
     app: myapp
     run: nginx
@@ -20,3 +20,4 @@ spec:
     ports:
     - containerPort:  80
       name:  http
+
